--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 } */
 
 .App-header {
-  background-color: #162140;
+  background-color: #161e34;
   /*min-height: 100vh;*/
   display: flex;
   flex-direction: column;
