--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: "#3a4052"
 }
 
 .App-logo {
@@ -14,7 +15,7 @@
 } */
 
 .App-header {
-  background-color: #161e34;
+  background-color: #3a4052;
   /*min-height: 100vh;*/
   display: flex;
   flex-direction: column;
